--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<form class="row g-3 needs-validation" novalidate>
 			<!-- first name -->
 			<div class="col-md-4">
-				<label for="first-name-input" class="form-lable">First Name </label>
+				<label for="first-name-input" class="form-lablel">First Name </label>
 				<input type="text" id="first-name-input" class="form-control" required>
 				<div class="invalid-feedback">First name required!</div>
 			</div>
@@ -38,8 +38,8 @@
 			</div>
 			<!-- graduation year -->
 			<div class="col-md-3">
-				<label for="graduation-input" class="form-label">Graduation Year</label>
-		        <select class="form-select" id="graduation-input" required>
+				<label for="grad-year-select" class="form-label">Graduation Year</label>
+		        <select class="form-select" id="grad-year-select" required>
 		        <option selected disabled value="">Choose...</option>
 		        <option>2020</option>
 		        <option>2021</option>
