--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<form class="row g-3 needs-validation" novalidate>
 			<!-- first name -->
 			<div class="col-md-4">
-				<label for="first-name-input" class="form-lablel">First Name </label>
+				<label for="first-name-input" class="form-label">First Name </label>
 				<input type="text" id="first-name-input" class="form-control" required>
 				<div class="invalid-feedback">First name required!</div>
 			</div>
